syntax = "proto3";

package auth.v1;

option go_package = "github.com/hijjiri/grpc-echo/api/auth/v1;authv1";

import "google/api/annotations.proto";

// 認証用の AuthService
service AuthService {
  // ログイン API
  //
  // HTTP:
  //   POST /auth/login
  //   Body: { "username": "...", "password": "..." }
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/auth/login"
      body: "*"
    };
  }
}

// 認証用の入力
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 認証結果（JWT）
message LoginResponse {
  string access_token = 1;
  string token_type   = 2;
  int64  expires_at   = 3;
}
